[gd_scene load_steps=2 format=3 uid="uid://c2xu22amf6uhh"]

[ext_resource type="Script" path="res://item_info.gd" id="1_dmras"]

[node name="ItemInfoOutline" type="ColorRect"]
offset_top = 126.0
offset_right = 200.0
offset_bottom = 426.0
color = Color(0, 0, 0, 0.588235)
script = ExtResource("1_dmras")

[node name="ItemInfoBG" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -90.0
offset_top = -140.0
offset_right = 90.0
offset_bottom = 140.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0.784314)

[node name="MarginContainer" type="MarginContainer" parent="ItemInfoBG"]
layout_mode = 0
offset_left = 7.0
offset_top = 60.0
offset_right = 180.0
offset_bottom = 280.0

[node name="InfoRows" type="VBoxContainer" parent="ItemInfoBG/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 25

[node name="ItemValue" type="RichTextLabel" parent="ItemInfoBG/MarginContainer/InfoRows"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 2
focus_mode = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
bbcode_enabled = true
text = "Value: "
scroll_active = false
shortcut_keys_enabled = false
selection_enabled = true

[node name="ItemRarity" type="RichTextLabel" parent="ItemInfoBG/MarginContainer/InfoRows"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 2
focus_mode = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
bbcode_enabled = true
text = "Rarity: "
scroll_active = false
shortcut_keys_enabled = false
selection_enabled = true

[node name="ItemName" type="RichTextLabel" parent="ItemInfoBG"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 0
offset_left = 7.0
offset_top = 5.0
offset_right = 180.0
offset_bottom = 30.0
focus_mode = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 17
bbcode_enabled = true
text = "Item Name"
scroll_active = false
shortcut_keys_enabled = false
selection_enabled = true
